--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,24 @@
 		</plugins>
 	</build>
 	
+	<profiles>
+		<profile>
+			<id>sonatype-oss-release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<configuration>
+							<!-- skip gpg signing as the release is not pushed to maven central -->
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
 	<scm>
 		<url>https://github.com/zeebe-io/zeebe-script-worker</url>
 		<connection>scm:git:git@github.com:zeebe-io/zeebe-script-worker.git</connection>
