--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 	</parent>
 
 	<properties>
-		<version.zeebe>0.15.0</version.zeebe>
+		<version.zeebe>0.19.0</version.zeebe>
 		<version.groovy>2.4.15</version.groovy>
-		<version.feel>1.5.0</version.feel>
+		<version.feel>1.8.0</version.feel>
 
 		<!-- release parent settings -->
 		<version.java>1.8</version.java>
@@ -33,8 +33,15 @@
 		<dependencies>
 			<dependency>
 				<groupId>io.zeebe</groupId>
-				<artifactId>zb-bom</artifactId>
+				<artifactId>zeebe-bom</artifactId>
 				<version>${version.zeebe}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-bom</artifactId>
+				<version>4.1.37.Final</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
