chore(CI): fixing CI config

--- a/pom.xml
+++ b/pom.xml
@@ -97,34 +97,36 @@
 
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<archive>
-						<manifest>
-							<mainClass>io.zeebe.script.ZeebeScriptWorkerApplication</mainClass>
-						</manifest>
-					</archive>
-					<finalName>${project.artifactId}-${project.version}</finalName>
-					<appendAssemblyId>false</appendAssemblyId>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <properties>
+                <plugin.version.gpg>1.6</plugin.version.gpg>
+                <gpg.passphrase>${env.GPG_PASS}</gpg.passphrase>
+                <resume>false</resume>
+                <tag>${env.RELEASE_VERSION}</tag>
+                <releaseVersion>${env.RELEASE_VERSION}</releaseVersion>
+                <developmentVersion>${env.DEVELOPMENT_VERSION}</developmentVersion>
+                <arguments>-s .ci/settings.xml -DskipTests</arguments>
+            </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-gpg-plugin</artifactId>
+                            <configuration>
+                                <gpgArguments>
+                                    <arg>--pinentry-mode</arg>
+                                    <arg>loopback</arg>
+                                </gpgArguments>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+    </profiles>
 
 	<repositories>
 		<repository>
