--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,12 @@
 name: Java CI
 
 on: 
-  [push]
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
   schedule:
   - cron: 0 7 * * 1-5
 
