--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<version.feel>1.11.0</version.feel>
 
 		<version.spring.boot>2.2.6.RELEASE</version.spring.boot>
-		<version.java>8</version.java>
+		<version.java>11</version.java>
 		<java.version>${version.java}</java.version>
 
 		<maven.compiler.source>${java.version}</maven.compiler.source>
@@ -77,6 +77,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mustache</artifactId>
 		</dependency>
 
 		<dependency>
