--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
         <version.groovy>2.4.20</version.groovy>
         <version.feel>1.12.3</version.feel>
+        <version.kotlin>1.3.72</version.kotlin>
 
         <version.spring.boot>2.3.5.RELEASE</version.spring.boot>
         <version.java>11</version.java>
@@ -109,6 +110,12 @@
             <groupId>org.camunda.feel</groupId>
             <artifactId>feel-engine</artifactId>
             <version>${version.feel}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-scripting-jsr223-embeddable</artifactId>
+            <version>${version.kotlin}</version>
         </dependency>
 
         <!-- test -->
