--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
         <version.groovy>2.4.20</version.groovy>
         <version.feel>1.12.3</version.feel>
-        <version.kotlin>1.3.72</version.kotlin>
+        <version.kotlin>1.4.10</version.kotlin>
 
         <version.spring.boot>2.3.5.RELEASE</version.spring.boot>
         <version.java>11</version.java>
@@ -50,6 +50,14 @@
                 <version>${version.zeebe}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-bom</artifactId>
+                <version>${version.kotlin}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <dependency>
@@ -114,7 +122,7 @@
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-scripting-jsr223-embeddable</artifactId>
+            <artifactId>kotlin-scripting-jsr223</artifactId>
             <version>${version.kotlin}</version>
         </dependency>
 
