--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - zeebe_network
   monitor:
     container_name: zeebe-script-worker
-    image: camunda/zeebe-script-worker:latest
+    image: ghcr.io/camunda-community-hub/zeebe-script-worker:1.0.0
     environment:
       - zeebe.client.broker.contactPoint=zeebe:26500
     depends_on:
