--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,31 @@
-name: Build project with Maven
-on:
-  pull_request:
-
+name: CI
+on: [ pull_request ]
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      pull-requests: write
     steps:
     - name: Checkout
-      uses: actions/checkout@f1d3225b5376a0791fdee5a0e8eac5289355e43a # pin@v2
-    - name: Java setup
-      uses: actions/setup-java@e54a62b3df9364d4b4c1c29c7225e57fe605d7dd # pin@v1
+      uses: actions/checkout@v4
+    - name: Setup Java
+      uses: actions/setup-java@v3
       with:
-        java-version: 17
-    - name: Cache
-      uses: actions/cache@99d99cd262b87f5f8671407a1e5c1ddfa36ad5ba # pin@v1
+        distribution: 'temurin'
+        java-version: '17'
+        cache: 'maven'
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
       with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Run Maven
-      run: mvn -B clean verify com.mycila:license-maven-plugin:check
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build
+      run: mvn verify -PcheckFormat -B
+    - name: Publish Unit Test Results
+      id: publish
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      if: always()
+      with:
+        files: '**/target/surefire-reports/*.xml'
