--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/.classpath
-/.project
-/.settings
-/target
-
-# intellij
+target
 .idea
 *.iml
+
+#eclipse
+**.project
+**.classpath
+**.settings
