--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -79,7 +79,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <configuration>
+          <finalName>${project.build.finalName}-with-script-engines</finalName>
           <shadedArtifactAttached>true</shadedArtifactAttached>
+          <useDependencyReducedPomInJar>true</useDependencyReducedPomInJar>
+          <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
           </transformers>
