--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -19,12 +19,17 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>io.camunda.connector</groupId>
+      <artifactId>element-template-generator</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <scope>provided</scope>
     </dependency>
 
-    <!-- script languages -->
+    <!-- scriptType languages -->
     <dependency>
       <groupId>com.samskivert</groupId>
       <artifactId>jmustache</artifactId>
@@ -92,6 +97,23 @@
             <phase>package</phase>
             <goals>
               <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>io.camunda.connector</groupId>
+        <artifactId>element-template-generator-maven-plugin</artifactId>
+        <configuration>
+          <connectorClasses>
+            <connectorClass>io.camunda.community.connector.script.ScriptConnector</connectorClass>
+          </connectorClasses>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>verify</phase>
+            <goals>
+              <goal>generate-templates</goal>
             </goals>
           </execution>
         </executions>
