--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
       with:
         upload_url: ${{ github.event.release.upload_url }}
         asset_path: ${{ steps.release.outputs.artifacts_archive_path }}
-        asset_name: camunda-7-to-8-migration.zip
+        asset_name: script-connector.zip
         asset_content_type: application/zip
     - name: Publish Unit Test Results
       id: publish
