--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
-    <version.spring.boot>3.1.5</version.spring.boot>
+    <version.spring-boot>3.1.5</version.spring-boot>
     <version.camunda>8.3.0</version.camunda>
     <version.camunda-spring>8.3.0</version.camunda-spring>
     <version.camunda-connectors>8.3.0</version.camunda-connectors>
@@ -76,7 +76,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>${version.spring.boot}</version>
+        <version>${version.spring-boot}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
